--- a/style/main.css
+++ b/style/main.css
@@ -19,6 +19,18 @@ div.header {
     margin-top: 40px;
 }
 
+div.title {
+    width: 100%;
+    float: left;
+    display: block;
+}
+
+div.worktime {
+    float: left;
+    display: block;
+    font-size: 10px;
+}
+
 span.required {
     color: #ff0000;
     font-size: 10px;
