--- a/style/main.css
+++ b/style/main.css
@@ -31,6 +31,48 @@ div.worktime {
     font-size: 10px;
 }
 
+/*通知style Begin*/
+div.notice {
+    float: left;
+    width: 100%;
+    margin: 0 auto;
+    height: 30px;
+    text-align: left;
+    font-size: 11px;
+    border: 1px solid #3d3d3d;
+    overflow: hidden;
+}
+.animate {
+    padding-left: 20px;
+    line-height: 23px;
+    font-size: 12px;
+    color: #000;
+    display: inline-block;
+    white-space: nowrap;
+    animation: 10s wordsLoop linear infinite normal;
+}
+@keyframes wordsLoop {
+    0% {
+        transform: translateX(200px);
+        -webkit-transform: translateX(200px);
+    }
+    100% {
+        transform: translateX(-100%);
+        -webkit-transform: translateX(-100%);
+    }
+}
+@-webkit-keyframes wordsLoop {
+    0% {
+    transform: translateX(200px);
+    -webkit-transform: translateX(200px);
+    }
+    100% {
+    transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    }
+}
+/*通知style End*/
+
 span.required {
     color: #ff0000;
     font-size: 10px;
@@ -67,8 +109,8 @@ ul.list li {
 }
 
 button.buttonBig {
-    border-radius: 25px;
-    padding: 8px;
+    border-radius: 8px;
+    padding: 2px;
     width: 120px;
     height: 40px;
     border:none;
