--- a/style/main.css
+++ b/style/main.css
@@ -19,10 +19,16 @@ div.header {
     margin-top: 40px;
 }
 
+span.nav {
+    float: left;
+    margin: 0 auto;
+    font-size: 10px;
+    width: 50px;
+}
+
 div.title {
     width: 100%;
     float: left;
-    display: block;
 }
 
 div.worktime {
@@ -35,18 +41,17 @@ div.worktime {
 div.notice {
     float: left;
     width: 100%;
-    margin: 0 auto;
-    height: 30px;
+    margin: 2px auto;
     text-align: left;
-    font-size: 11px;
     border: 1px solid #3d3d3d;
+    background-color: #f9d69e;
     overflow: hidden;
 }
 .animate {
     padding-left: 20px;
-    line-height: 23px;
+    line-height: 5px;
     font-size: 12px;
-    color: #000;
+    color: #3d3d3d;
     display: inline-block;
     white-space: nowrap;
     animation: 10s wordsLoop linear infinite normal;
@@ -97,15 +102,19 @@ a.info {
     font-size:10px;
 }
 ul.list {
-    margin:0px;
+    margin:0 auto;
     padding: 0px;
-    line-height: 30px;
+    line-height: 150%;
+    width: 100%;
+    float: left;
 }
 ul.list li {
     list-style-type: none;
     font-size: 12px;
     float: left;
     text-align: left;
+    width: 100%;
+    margin: 0px auto;
 }
 
 button.buttonBig {
@@ -114,6 +123,8 @@ button.buttonBig {
     width: 120px;
     height: 40px;
     border:none;
+    margin: 4px auto;
+    font-size: 12px;
 }
 
 button.left {
