--- a/style/main.css
+++ b/style/main.css
@@ -44,7 +44,7 @@ div.notice {
     margin: 2px auto;
     text-align: left;
     border: 1px solid #3d3d3d;
-    background-color: #f9d69e;
+    background-color: #fbe0a9;
     overflow: hidden;
 }
 .animate {
