--- a/style/main.css
+++ b/style/main.css
@@ -124,7 +124,7 @@ ul.list li {
     margin: 0px auto;
 }
 
-button.buttonBig, a.buttonBig {
+button.buttonBig {
     border-radius: 6px;
     padding: 2px;
     width: 120px;
@@ -134,17 +134,24 @@ button.buttonBig, a.buttonBig {
     font-size: 12px;
 }
 
-a.file {
+a.buttonBig {
+    width: 120px;
+    height: 40px;
+    margin: 4px auto;
     padding: 0px;
+    border: none;
+    border-radius: 6px;
+    font-size: 12px;
     position: relative;
     display: inline-block;
     overflow: hidden;
-    text-decoration: none;
     text-indent: 0;
+    text-align: center;
+    text-decoration: none;
     line-height: 40px;
 }
 
-a.file:hover {
+a.buttonBig:hover {
     background-color: #ee9b3b;
     color: #fefefe;
     text-decoration: none;
